cabal-version:       >=1.10

name:                upload-daemon
version:             0.1.0.0
synopsis:            Upload daemon for nix post-build-hook
-- description:
-- bug-reports:
license:             MPL-2.0
license-file:        LICENSE
author:              Alexander Bantyev
maintainer:          balsoft@balsoft.ru
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable upload-daemon
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
                     , prometheus
                     , network-simple
                     , async
                     , fmt
                     , text                     
                     , bytestring
                     , process
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -threaded
